feat: Move Meta Pixel noscript to body
Moves the Meta Pixel noscript tag to the body of the HTML to ensure it's rendered correctly for tracking purposes.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Protocolo Lipo-Verme - Desparasitação Natural</title>
     
-    <!-- Meta Pixel Code -->
+    <!-- Meta Pixel Code (JS Part) -->
     <script>
     !function(f,b,e,v,n,t,s)
     {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -19,10 +19,7 @@
     fbq('init', '1389378532817268');
     fbq('track', 'PageView');
     </script>
-    <noscript><img height="1" width="1" style="display:none"
-    src="https://www.facebook.com/tr?id=1389378532817268&ev=PageView&noscript=1"
-    /></noscript>
-    <!-- End Meta Pixel Code -->
+    <!-- End Meta Pixel Code (JS Part) -->
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -67,6 +64,12 @@
 </script>
 </head>
   <body>
+    <!-- Meta Pixel Code (Noscript Part) -->
+    <noscript><img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=1389378532817268&ev=PageView&noscript=1"
+    /></noscript>
+    <!-- End Meta Pixel Code (Noscript Part) -->
+    
     <div id="root"></div>
   </body>
 </html>
