--- a/index.html
+++ b/index.html
@@ -55,10 +55,12 @@
   <script type="importmap">
 {
   "imports": {
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "lucide-react": "https://esm.sh/lucide-react@0.460.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0"
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
@@ -71,5 +73,7 @@
     <!-- End Meta Pixel Code (Noscript Part) -->
     
     <div id="root"></div>
+    <!-- Script principal para carregar o React -->
+    <script type="module" src="index.tsx"></script>
   </body>
 </html>
